--- a/app/src/main/res/layout/activity_blood_pressure.xml
+++ b/app/src/main/res/layout/activity_blood_pressure.xml
@@ -4,22 +4,34 @@
     android:id="@+id/activity_blood_pressure"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.wei.usb_demo.activity.BloodPressureActivity"
-    android:orientation="vertical">
+    tools:context="com.example.wei.usb_demo.activity.BloodPressureActivity">
 
     <Button
+        android:id="@+id/record_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="历史记录"
-        android:id="@+id/record_btn"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="实时"
-        android:id="@+id/real_time_btn"/>
+        android:text="历史记录" />
 
+    <Button
+        android:id="@+id/real_time_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="实时" />
+
+    <EditText
+        android:id="@+id/send_data_et"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="请输入要发送的数据" />
+
+    <Button
+        android:id="@+id/send_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="发送" />
 </LinearLayout>
