1.一个血压数据包解析出具体数据 2.血糖模块部分

--- a/app/src/main/res/layout/activity_blood_pressure.xml
+++ b/app/src/main/res/layout/activity_blood_pressure.xml
@@ -34,4 +34,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="发送" />
+
+    <TextView
+        android:id="@+id/info_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:hint="信息"
+        android:textSize="20sp" />
 </LinearLayout>
