--- a/app/src/main/res/layout/activity_realtime.xml
+++ b/app/src/main/res/layout/activity_realtime.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_realtime"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#aab2bd">
+    android:layout_height="match_parent">
 
     <lecho.lib.hellocharts.view.LineChartView
         android:id="@+id/show_lineChart"
