--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -38,48 +37,48 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_below="@+id/linearlayout1"
+        android:id="@+id/linearlayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/linearlayout2">
+        android:layout_below="@+id/linearlayout1"
+        android:orientation="horizontal">
 
         <Button
-            android:layout_weight="1"
+            android:id="@+id/read_card_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="读卡"
-            android:id="@+id/read_card_main"/>
+            android:layout_weight="1"
+            android:text="读卡" />
 
         <Button
-            android:layout_weight="1"
+            android:id="@+id/blood_sugar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="血糖"
-            android:id="@+id/blood_sugar"/>
+            android:layout_weight="1"
+            android:text="血糖" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_below="@+id/linearlayout2"
+        android:id="@+id/linearlayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/linearlayout3">
+        android:layout_below="@+id/linearlayout2"
+        android:orientation="horizontal">
 
         <Button
-            android:layout_weight="1"
+            android:id="@+id/heart_rate_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="心率"
-            android:id="@+id/heart_rate_btn"/>
+            android:layout_weight="1"
+            android:text="心率" />
 
         <Button
-            android:layout_weight="1"
+            android:id="@+id/print_btn_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="打印"
-            android:id="@+id/print_btn_main"/>
+            android:layout_weight="1"
+            android:text="打印" />
 
     </LinearLayout>
 
