--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorGray">#B2B2B2</color>
     <color name="colorBlack">#000000</color>
+    <color name="common_tint_bar_color">#0176da</color>
 </resources>
