--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:background="#ffffff">
+
+    <TextView
+        android:id="@+id/hint"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:gravity="center"
+        android:hint="已插入的usb设备会在这里显示"
+        android:visibility="invisible" />
 
     <com.example.wei.usb_demo.DeviceListView
         android:id="@+id/deviceListView"
         android:layout_width="match_parent"
-        android:layout_height="360dp"></com.example.wei.usb_demo.DeviceListView>
+        android:layout_height="250dp"></com.example.wei.usb_demo.DeviceListView>
 
     <LinearLayout
         android:id="@+id/linearlayout1"
@@ -20,19 +26,26 @@
         android:layout_below="@+id/deviceListView"
         android:orientation="horizontal">
 
-        <Button
+        <com.example.wei.usb_demo.customviews.IndicateView
             android:id="@+id/blood_pressure"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="血压" />
+            android:background="@drawable/indication_selector"
+            app:indicateBg="@drawable/blood_pressure_bg"
+            app:indicateIcon="@drawable/blood_pressure_icon"
+            app:indicateText="血压"></com.example.wei.usb_demo.customviews.IndicateView>
 
-        <Button
+        <com.example.wei.usb_demo.customviews.IndicateView
             android:id="@+id/blood_oxygen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="血氧" />
+            android:background="@drawable/indication_selector"
+            app:indicateBg="@drawable/blood_oxygen_bg"
+            app:indicateIcon="@drawable/blood_oxygen_icon"
+            app:indicateText="血氧"></com.example.wei.usb_demo.customviews.IndicateView>
+
 
     </LinearLayout>
 
@@ -41,21 +54,29 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/linearlayout1"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingTop="10dp">
 
-        <Button
+        <com.example.wei.usb_demo.customviews.IndicateView
             android:id="@+id/read_card_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="读卡" />
+            android:background="@drawable/indication_selector"
+            app:indicateBg="@drawable/reader_bg"
+            app:indicateIcon="@drawable/reader_icon"
+            app:indicateText="读卡"></com.example.wei.usb_demo.customviews.IndicateView>
 
-        <Button
+        <com.example.wei.usb_demo.customviews.IndicateView
             android:id="@+id/blood_sugar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="血糖" />
+            android:background="@drawable/indication_selector"
+            app:indicateBg="@drawable/blood_sugar_bg"
+            app:indicateIcon="@drawable/blood_sugar_icon"
+            app:indicateText="血糖"></com.example.wei.usb_demo.customviews.IndicateView>
+
 
     </LinearLayout>
 
@@ -64,21 +85,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/linearlayout2"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingTop="10dp">
 
-        <Button
+        <com.example.wei.usb_demo.customviews.IndicateView
             android:id="@+id/heart_rate_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="心率" />
+            android:background="@drawable/indication_selector"
+            app:indicateBg="@drawable/heart_rate_bg"
+            app:indicateIcon="@drawable/heart_rate_icon"
+            app:indicateText="心率"></com.example.wei.usb_demo.customviews.IndicateView>
 
-        <Button
+        <com.example.wei.usb_demo.customviews.IndicateView
             android:id="@+id/print_btn_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="打印" />
+            android:background="@drawable/indication_selector"
+            app:indicateBg="@drawable/printer_bg"
+            app:indicateIcon="@drawable/printer_icon"
+            app:indicateText="打印"></com.example.wei.usb_demo.customviews.IndicateView>
 
     </LinearLayout>
 
