1.界面相关 2.去除无用导包

--- a/app/src/main/res/layout/activity_blood_record.xml
+++ b/app/src/main/res/layout/activity_blood_record.xml
@@ -3,10 +3,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/tv_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:text="最近一天"
+        android:textColor="@color/common_tint_bar_color"
+        android:textSize="16sp" />
+
+    <lecho.lib.hellocharts.view.LineChartView
+        android:id="@+id/lvc_main"
+        android:layout_width="match_parent"
+        android:layout_height="360dp"
+        android:layout_centerVertical="true"
+        android:transitionName="line" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:layout_above="@+id/lvc_main"
+        android:layout_below="@+id/lvc_main"
         android:visibility="visible">
 
         <TextView
@@ -69,11 +86,5 @@
             android:background="#0e6841" />
     </RelativeLayout>
 
-    <lecho.lib.hellocharts.view.LineChartView
-        android:id="@+id/lvc_main"
-        android:layout_width="match_parent"
-        android:layout_height="360dp"
-        android:layout_centerVertical="true"
-        android:transitionName="line" />
 
 </RelativeLayout>
