--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorGray">#B2B2B2</color>
     <color name="colorBlack">#000000</color>
     <color name="common_tint_bar_color">#0176da</color>
+    <color name="window_background_color">#E5E5E5</color>
 </resources>
