--- a/app/src/main/res/layout/common_toolbar_layout.xml
+++ b/app/src/main/res/layout/common_toolbar_layout.xml
@@ -11,5 +11,17 @@
         android:layout_height="wrap_content"
         android:background="@color/common_tint_bar_color"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"></android.support.v7.widget.Toolbar>
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <TextView
+            android:id="@+id/tv_right"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:layout_marginRight="10dp"
+            android:text="右边文字"
+            android:textColor="#ffffff"
+            android:textSize="16sp"
+            android:visibility="invisible" />
+    </android.support.v7.widget.Toolbar>
 </LinearLayout>
