血压计ch340芯片处理以及界面部分修改

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorBlack">#000000</color>
     <color name="common_tint_bar_color">#0176da</color>
     <color name="window_background_color">#E5E5E5</color>
+    <color name="white">#ffffff</color>
 </resources>
