--- a/app/src/main/res/layout/blood_oxygen_line_activity.xml
+++ b/app/src/main/res/layout/blood_oxygen_line_activity.xml
@@ -19,13 +19,13 @@
 
             <lecho.lib.hellocharts.view.LineChartView
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="150dp"
                 android:background="@color/colorBlack"
                 android:id="@+id/spo2_line" />
 
             <lecho.lib.hellocharts.view.LineChartView
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="150dp"
                 android:background="@color/colorBlack"
                 android:layout_marginTop="3dp"
                 android:id="@+id/pr_line" />
@@ -33,10 +33,44 @@
 
         <View
             android:layout_width="2dp"
-            android:layout_height="403dp"
+            android:layout_height="303dp"
             android:background="@color/colorAccent"
             android:id="@+id/line_view"/>
 
     </FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="SpO₂："
+            android:layout_weight="1"
+            android:id="@+id/spo2_value"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="PR："
+            android:layout_weight="1"
+            android:id="@+id/pr_value"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="PI："
+            android:layout_weight="1"
+            android:id="@+id/pi_value"/>
+
+    </LinearLayout>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="波形数据"
+        android:id="@+id/send_data"/>
 
 </LinearLayout>
