--- a/app/src/main/res/layout/activity_realtime.xml
+++ b/app/src/main/res/layout/activity_realtime.xml
@@ -5,16 +5,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <lecho.lib.hellocharts.view.LineChartView
-        android:id="@+id/show_lineChart"
-        android:layout_width="wrap_content"
-        android:layout_height="360dp" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/show_lineChart"
-        android:layout_marginTop="30dp"
+        android:layout_alignParentTop="true"
+        android:gravity="left"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_test_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp" />
+
+
+        <TextView
+            android:id="@+id/tv_test_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -82,4 +100,10 @@
                 app:radius="10dp" />
         </LinearLayout>
     </LinearLayout>
+
+    <lecho.lib.hellocharts.view.LineChartView
+        android:id="@+id/show_lineChart"
+        android:layout_width="wrap_content"
+        android:layout_height="360dp"
+        android:layout_above="@+id/ll2" />
 </RelativeLayout>
