--- a/app/src/main/res/layout/activity_blood_sugar.xml
+++ b/app/src/main/res/layout/activity_blood_sugar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_blood_sugar"
     android:layout_width="match_parent"
@@ -14,4 +15,40 @@
         android:gravity="center"
         android:hint="信息"
         android:textSize="20sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="30dp"
+        android:orientation="horizontal">
+
+        <com.example.wei.usb_demo.activity.StateButton
+            android:id="@+id/btn_connct"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/show_lineChart"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:text="连接血糖仪"
+            android:textColor="@color/white"
+            app:normalBackgroundColor="@color/common_tint_bar_color"
+            app:pressedBackgroundColor="#0f60a6"
+            app:radius="10dp" />
+
+        <com.example.wei.usb_demo.activity.StateButton
+            android:id="@+id/btn_start_test"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/show_lineChart"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:text="启动测量"
+            android:textColor="@color/white"
+            app:normalBackgroundColor="@color/common_tint_bar_color"
+            app:pressedBackgroundColor="#0f60a6"
+            app:radius="10dp" />
+
+    </LinearLayout>
 </RelativeLayout>
