--- a/app/src/main/res/layout/activity_blood_pressure.xml
+++ b/app/src/main/res/layout/activity_blood_pressure.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.wei.usb_demo.activity.BloodPressureActivity">
+    tools:context="com.example.wei.usb_demo.bloodpressure.BloodPressureActivity">
 
     <Button
         android:id="@+id/record_btn"
