1.增加加载对话框类ProgressDialog 2.查询某段时间内血糖数据方法 3.血压计检测到开机后发送连接命令

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="common_tint_bar_color">#0176da</color>
     <color name="window_background_color">#E5E5E5</color>
     <color name="white">#ffffff</color>
+
+    <color name="RGB_66000000">#66000000</color>
+    <color name="RGB_FFFFFF">#FFFFFF</color>
 </resources>
