--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,12 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="dp_10">10dp</dimen>
+
+    <dimen name="border_corner_radius">6dp</dimen>
+    <dimen name="common_progress_dialog_image_width">116px</dimen>
+    <dimen name="common_progress_dialog_max_width">60dp</dimen>
+    <dimen name="common_progress_max_width">140dp</dimen>
+    <dimen name="common_progress_max_height">130dp</dimen>
 </resources>
