--- a/app/src/main/res/layout-land/activity_heart_rate.xml
+++ b/app/src/main/res/layout-land/activity_heart_rate.xml
@@ -4,10 +4,8 @@
     android:id="@+id/activity_heart_rate"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.wei.usb_demo.activity.HeartRateActivity"
     android:orientation="vertical">
 
@@ -101,15 +99,15 @@
             android:id="@+id/label_result"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/label_result_title"
+            android:layout_alignParentRight="true"
             android:text="" />
     </RelativeLayout>
 
     <com.mhealth365.osdk.ecgbrowser.RealTimeEcgBrowser
         android:id="@+id/ecgBrowser"
         android:layout_width="fill_parent"
-        android:layout_height="200dip"/>
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
 
     <LinearLayout
         android:layout_width="fill_parent"
