--- a/app/src/main/res/layout-land/activity_blood_pressure.xml
+++ b/app/src/main/res/layout-land/activity_blood_pressure.xml
@@ -22,4 +22,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="实时" />
+
+    <com.example.wei.usb_demo.data.views.CircleLoadingProgressView
+        android:id="@+id/pregress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"></com.example.wei.usb_demo.data.views.CircleLoadingProgressView>
 </LinearLayout>
