--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
 
     <color name="RGB_66000000">#66000000</color>
     <color name="RGB_FFFFFF">#FFFFFF</color>
+    <color name="RGB_E6E9ED">#E6E9ED</color>
+    <color name="RGB_656D78">#656D78</color>
+    <color name="RGB_CCD1D9">#CCD1D9</color>
 </resources>
