--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
 
     <color name="RGB_66000000">#66000000</color>
     <color name="RGB_FFFFFF">#FFFFFF</color>
+    <color name="RGB_0BADFC">#0BADFC</color>
 </resources>
