--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,10 +4,12 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="dp_10">10dp</dimen>
+    <dimen name="text_size_dp_16">16dp</dimen>
 
     <dimen name="border_corner_radius">6dp</dimen>
     <dimen name="common_progress_dialog_image_width">116px</dimen>
     <dimen name="common_progress_dialog_max_width">60dp</dimen>
     <dimen name="common_progress_max_width">140dp</dimen>
     <dimen name="common_progress_max_height">130dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
